fix a bug in safari: buttons in feature projects overlap.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -189,7 +189,7 @@ body > .content {
     .demo .card-body a {
         display: inline;
         margin: 0;
-        margin-right: 5px!important;
+        margin-right: 4px!important;
     }
 }
 
